--- a/src/app/profile-preview/profile-preview.component.html
+++ b/src/app/profile-preview/profile-preview.component.html
@@ -1,5 +1,5 @@
 <div class="nav-link d-sm-flex align-items-sm-center profile-preview" (click)="showProfile()">
-    <strong class="d-none d-sm-block me-3">{{username}}</strong>
+    <strong class="d-none d-sm-block me-3">@{{username}}</strong>
     <img
         src="https://mdbcdn.b-cdn.net/img/new/avatars/1.webp"
         class="rounded-circle"
