--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,2 +1,3 @@
 <app-navigation-bar></app-navigation-bar>
+<button class="btn btn-dark rounded rounded-circle  mx-auto d-block mb-3" (click)="newPost()"><i class="fa-solid fa-circle-plus"></i></button>
 <app-post *ngFor="let post of postList" [postId]="post.id" ></app-post>
