--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -58,3 +58,7 @@
         
     </div>
 </div>
+<!-- POSTS -->
+<div>
+    <app-post *ngFor="let post of posts" [postId]="post.id"></app-post>
+</div>
