--- a/src/app/profile-edit/profile-edit.component.html
+++ b/src/app/profile-edit/profile-edit.component.html
@@ -2,7 +2,7 @@
 
 <div class="">
     <form #profileEditForm (submit)="editProfile()">
-        <div class="row rounded text-light bg-dark p-3 mb-3 text-center mx-1">
+        <div class="row rounded text-light bg-dark p-3 mb-3 mx-1">
             <div class="row">
                 <h5>Perfil</h5>
             </div>
