post delete control with events

--- a/src/app/post-full-view/post-full-view.component.html
+++ b/src/app/post-full-view/post-full-view.component.html
@@ -1,2 +1,2 @@
 <app-navigation-bar></app-navigation-bar>
-<app-post [postId]="id"></app-post>
+<app-post [postId]="id" (deletedPost)="deleteSelf($event)"></app-post>
