--- a/src/app/comment/comment.component.html
+++ b/src/app/comment/comment.component.html
@@ -27,7 +27,7 @@
 </ng-template>
 
 <ng-template #editting>
-    <form class="p-3" (submit)="update()">
+    <form #commentEditForm="ngForm" class="p-3" (submit)="update()">
         <div class="row mb-3">
             <div class="col">
                 <textarea 
