--- a/src/app/post-full-view/post-full-view.component.html
+++ b/src/app/post-full-view/post-full-view.component.html
@@ -1,3 +1,12 @@
 <app-navigation-bar></app-navigation-bar>
-<app-post [postId]="id" (deletedPost)="deleteSelf($event)"></app-post>
-<app-comment *ngFor="let comment of comments" [commentId]="comment.id" (deletedComment)="deleteComment($event)"></app-comment>
+<app-post 
+    [postId]="id" 
+    (deletedPost)="deleteSelf($event)"
+    (newComment)="addComment($event)"
+></app-post>
+
+<app-comment 
+    *ngFor="let comment of comments" 
+    [commentId]="comment.id" 
+    (deletedComment)="deleteComment($event)"
+></app-comment>
