--- a/src/app/post-new/post-new.component.html
+++ b/src/app/post-new/post-new.component.html
@@ -1,5 +1,5 @@
 <app-navigation-bar></app-navigation-bar>
-<form (submit)="createPost()">
+<form #newPostForm="ngForm" (submit)="createPost()">
     <div class="row rounded text-light bg-dark p-3 mb-3 mx-1">
             <h5>Post</h5>
         <div class="row mb-3">
